# leda-distro

./: .dockerignore  .gitignore  .gitmodules  .ort.yml  BUILD.md  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  build-aarch64-qemu.sh  build-aarch64-rpi4.sh  build-arm-qemu.sh  build-x86_64.sh  desiredstate.json  sdv-image-all-raspberrypi4-64.wic.bz2
.devcontainer/: Dockerfile  devcontainer.json  post-attach.sh  post-start.sh
.github/: CODEOWNERS
.workers/: Dockerfile
agl/: Dockerfile  README.md
examples/: start-update-example.yaml
kas/: README.md  common-kirkstone.yaml  generate-mirror.yaml  leda-debian-packages.yaml  leda-honister.yaml  leda-jetson-nano-devkit.yaml  leda-kirkstone.yaml  leda-master.yaml  leda-qemuarm64.yaml  leda-qemux86-64.yaml  leda-raspberrypi4-64.yaml  leda-tegra.yaml  mirrors.yaml  pre-download.yaml  spdx.yaml
resources/: README.md
scripts/: PrepVMasGHRunner.sh  clean-tmp.sh  dhcp.conf  leda  provision-device-tap.sh  provision-device.sh  release-validation.sh  run-dhcp.sh  run-image.sh  sdv-initial-once-setup.sh  setup-taps.sh  setup.sh  shell-arm.sh  shell-arm64.sh  shell-common.sh  (+2 more)
tests/: Cargo.toml  README.md
tests/src/: config.json  main.rs  report_handler.rs  test_parser.rs  test_utils.rs
tests/src/robot/: leda_keywords.resource  leda_test.robot
tests/src/tests/: async_web_tests.rs  k3s_tests.rs  mod.rs  mosquitto_tests.rs  os_tests.rs  rauc_tests_check_rauc_mark_good_service.rs  rauc_tests_check_rauc_service.rs  rauc_tests_slot_status.rs  rauc_tests_sys_conf.rs  sshd_tests.rs
tests/src/tests_bash/: test_rauc.sh
(+279 files in other folders)
