cargo-features = ["strip"]

[package]
name = "leda-distro-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "^0.1.52"
junit-report = "^0.7.0"
reqwest = { version = "^0.11.9", features=["default-tls"] }
sysinfo = "^0.23.5"
tokio = { version = "1", features=["rt-multi-thread", "macros"] }
serde_json = "^1.0.79"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
